[package]
name = "cococrawl"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
image = "0.25.8"
indicatif = { version = "0.18.0", features = ["rayon"] }
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.14"
